update machine eukrea-cpuimx51

--- a/conf/machine/eukrea-cpuimx51.conf
+++ b/conf/machine/eukrea-cpuimx51.conf
@@ -6,7 +6,7 @@ MACHINE_FEATURES = "kernel26 apm alsa ext2 ext3 usbhost usbgadget screen camera 
 
 GUI_MACHINE_CLASS = "bigscreen"
 
-require conf/machine/include/eukrea.inc
+#require conf/machine/include/eukrea.inc
 require conf/machine/include/tune-cortexa8.inc
 
 XSERVER = "xserver-xorg \
@@ -42,3 +42,7 @@ PREFERRED_VERSION_linux-yocto ?= "3.19%"
 KERNEL_IMAGETYPE = "uImage"
 KERNEL_DEVICETREE = "imx51-eukrea-mbimxsd51-baseboard.dtb"
 KERNEL_EXTRA_ARGS += "LOADADDR=${UBOOT_ENTRYPOINT}"
+
+MACHINE_EXTRA_RRECOMMENDS = " kernel-modules kernel-devicetree"
+
+EXTRA_IMAGEDEPENDS += "virtual/bootloader"
