update barebox version and modify recipes

--- a/conf/machine/eukrea-cpuimx51.conf
+++ b/conf/machine/eukrea-cpuimx51.conf
@@ -25,7 +25,8 @@ MKUBIFS_ARGS = "-m 2048 -e 129024 -c 8152"
 UBINIZE_ARGS = "-m 2048 -p 128KiB -s 512"
 
 PREFERRED_PROVIDER_virtual/bootloader = "barebox"
-PREFERRED_VERSION_barebox = "2012.09.0"
+#PREFERRED_VERSION_barebox = "2012.09.0"
+PREFERRED_VERSION_barebox = "2015.11.0"
 BAREBOX_MACHINE = "eukrea_cpuimx51"
 UBOOT_ENTRYPOINT = "0x90008000"
 UBOOT_LOADADDRESS = "0x90008000"
