--- a/conf/machine/eukrea-cpuimx51.conf
+++ b/conf/machine/eukrea-cpuimx51.conf
@@ -40,6 +40,8 @@ EXTRA_IMAGECMD_jffs2 = "--little-endian --eraseblock=0x20000 -n \
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
 PREFERRED_VERSION_linux-yocto ?= "3.19%"
+#PREFERRED_PROVIDER_virtual/kernel ?= "linux"
+#PREFERRED_VERSION_linux ?= "3.4%"
 KERNEL_IMAGETYPE = "uImage"
 KERNEL_DEVICETREE = "imx51-eukrea-mbimxsd51-baseboard.dtb"
 KERNEL_EXTRA_ARGS += "LOADADDR=${UBOOT_ENTRYPOINT}"
